# vpypi

./: README.md  Taskfile.yml  pyproject.toml
pypi_verify/: _cli.py  _core.py
vpypi/: __init__.py
