[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"


[tool.flit.metadata]
module = "vpypi"
license = "MIT"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/orsinium-labs/vpypi"
description-file = "README.md"
requires-python = ">=3.6"
keywords = "pypi,gpg,gnupg"
requires = [
    "requests",
    "python-gnupg",
]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

[tool.flit.metadata.requires-extra]
test = [
    "isort",
    "mypy",
    "pytest",
]
